Fixed size of animated GIF demo of availability grid when page is displayed on mobile devices.

--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -164,7 +164,11 @@ footer {
 		width: 500px !important;
 		height: 200px;
 	}
-  
+
+  .gifAvail {
+    width: 600px !important;
+    height: auto;
+  }
 
 	.timezones {
 		width: 600px !important;
@@ -203,7 +207,8 @@ footer {
 		}
 
     .gifAvail {
-      width: 300px;
+      width: 300px !important;
+      height: auto;
     }
 
 	.content .timezones {
